updated blog 1 text

--- a/src/posts/2-post-number-two/post.mdx
+++ b/src/posts/2-post-number-two/post.mdx
@@ -36,7 +36,7 @@ To save time and avoid privacy-headaches, follow these steps to identify your us
 
 ```js
 const pointng = new PointNG({
- level: Check these examples for what types of personalizations you can make based on a user's locationcountry',
+ level: 'city',
  api_key: 'YOUR-API-KEY-HERE'
 });
 ```
@@ -47,7 +47,7 @@ declines your website to use her GPS-location, pointNG uses the device time
 zone as the default fallback to estimate the location.
 <ul>
   <li>
-    3. Sign up <a href="https://www.poitnng.io/?utm_source=blog&utm_medium=website&utm_campaign=get_user_location_securely_in_javascript_without_privacy_hassle" target="_blank">here</a> to whitelist your domain, and grab your free API-key.
+    3. Sign up <a href="https://www.poitng.io/?utm_source=blog&utm_medium=website&utm_campaign=get_user_location_securely_in_javascript_without_privacy_hassle" target="_blank">here</a> to whitelist your domain, and grab your free API-key.
     Paste the key to the initialization script's 'api_key' parameter.
   </li>
 </ul>
@@ -71,4 +71,4 @@ pointng.getLocation().then(function (prediction) {
 </script>
 ```
 
-Check <a href="https://www.poitnng.io/?utm_source=blog&utm_medium=website&utm_campaign=get_user_location_securely_in_javascript_without_privacy_hassle#examples" target="_blank">these examples</a> for what types of personalizations you can make based on a user's location. 
+Check <a href="https://www.poitng.io/?utm_source=blog&utm_medium=website&utm_campaign=get_user_location_securely_in_javascript_without_privacy_hassle#examples" target="_blank">these examples</a> for what types of personalizations you can make based on a user's location. 
