updated blog 1 text

--- a/src/posts/2-post-number-two/post.mdx
+++ b/src/posts/2-post-number-two/post.mdx
@@ -47,7 +47,7 @@ declines your website to use her GPS-location, pointNG uses the device time
 zone as the default fallback to estimate the location.
 <ul>
   <li>
-    3. Sign up <a href="https://www.pointng.io/?utm_source=blog&utm_medium=website&utm_campaign=get_user_location_securely_in_javascript_without_privacy_hassle" target="_blank">here</a> to whitelist your domain, and grab your free API-key.
+    3. Sign up <a href="https://app.pointng.io/register?utm_source=blog&utm_medium=website&utm_campaign=get_user_location_securely_in_javascript_without_privacy_hassle" target="_blank">here</a> to whitelist your domain, and grab your free API-key.
     Paste the key to the initialization script's 'api_key' parameter.
   </li>
 </ul>
