--- a/src/posts/2-post-number-two/post.mdx
+++ b/src/posts/2-post-number-two/post.mdx
@@ -4,7 +4,7 @@ slug: get-user-location-securely-in-javascript-without-privacy-hassle
 image: ./images/get_user_location_without_privacy_hassle.jpg
 date: 2020-11-19
 author: Kimmo Ihanus
-category: Tools
+category: Web Development
 readTime: 2
 ---
 
