blog tags updated

--- a/src/posts/3-post-number-three/post.mdx
+++ b/src/posts/3-post-number-three/post.mdx
@@ -4,7 +4,7 @@ slug: secure-location-detection-in-javascript-with-pointng
 image: ./images/pointng_intro.png
 date: 2020-11-22
 author: Kimmo Ihanus
-category: Developer Tools
+category: Privacy
 readTime: 2
 ---
 
