Trading privacy blog added

--- a/src/posts/1-privacy-protected-gps-location-identification-with-machine-learning/post.mdx
+++ b/src/posts/1-privacy-protected-gps-location-identification-with-machine-learning/post.mdx
@@ -16,9 +16,9 @@ I think that everyone agrees that most digital services have a creepy way of ask
 
 In addition, to make this collected coordinate data actionable, digital services need to pass it, over the internet, to 3rd party services. This is not 100% safe because as long as coordinate data leaves the device and travels through the internet to 3rd parties, there are risks. Not to mention the potential GDPR & CCPA headaches resulting when you want just to do some really simple location personalized feature.
 
-## Could we just make this location identification thing simpler and less creepy?
+<p><b>Could we just make this location identification thing simpler and less creepy?</b></p>
 
-### Meet pointNG — tool for privacy protected location identification
+## Meet pointNG — tool for privacy protected location identification
 
 To solve this, we at Grew have created <a href="https://www.pointng.io" target="_blank">pointNG</a>, a technology that makes GPS-based location personalization as simple and safe as possible.
 
@@ -28,7 +28,7 @@ When a website visitor permits to use her/his location data, instead of sending 
 
 This way, we can make sure the end-users’ coordinate data is safe, as we are not sending it away from the browser or device.
 
-Javascript integration with Edge Machine Learning
+## Javascript integration with Edge Machine Learning
 
 To make the solution usable, we created a Javascript SDK developer tool that uses approximately 5000 pre-trained neural networks stored on a CDN for location identification. The SDK contains easy to use functions for web-developers to start creating location-based services with pointNG technology.
 
@@ -38,9 +38,7 @@ To make the solution usable, we created a Javascript SDK developer tool that use
   <li>User-centric: we have implemented a browser widget that gives the website’s end users the power to control her/his location tracking preferences.</li>
 </ul>
 
-![GATSBY_EMPTY_ALT](./images/user_widget.gif)
-
-### So what are the benefits?
+<h2>So what are the benefits?</h2>
 
 <ul>
   <li>pointNG enables companies to do better business through improved user experience without privacy compromises.</li>
