--- a/src/posts/3-secure-location-detection-in-javascript-with-pointng/post.mdx
+++ b/src/posts/3-secure-location-detection-in-javascript-with-pointng/post.mdx
@@ -10,7 +10,7 @@ readTime: 2
 
 import { Link } from "gatsby"
 
-<a href="https://www.pointng.io" target="_blank">pointNG</a> is a tool that enables developers to build location-based websites with maximum privacy. It's a piece of code that you can insert to your website and then use our functions to create location-based services without the need to worry about privacy-related risks (GDPR / CCPA / Privacy Policy updates etc.).
+<p><a href="https://www.pointng.io" target="_blank">pointNG</a> is a tool that enables developers to build location-based websites with maximum privacy. It's a piece of code that you can insert to your website and then use our functions to create location-based services without the need to worry about privacy-related risks (GDPR / CCPA / Privacy Policy updates etc.).</p>
 
 <p>
   Unlike traditional geocoding services, pointNG does not share GPS-coordinate data with external services. It achieves this by using machine learning directly in the browser without sending coordinate-data away to servers.
