h2 to h1 in blog title

--- a/src/posts/5-trading-privacy-for-personalized-online-experience/post.mdx
+++ b/src/posts/5-trading-privacy-for-personalized-online-experience/post.mdx
@@ -1,6 +1,6 @@
 ---
-title: Trading privacy for personalized online experience
-slug: trading-privacy-for-personalized-online-experience
+title: How online experience is traded for privacy
+slug: how-online-experience-is-traded-for-privacy
 image: ./images/photo-1533895328642-8035bacd565a.jpg
 date: 2020-11-25
 author: Jere Meriluoto
@@ -18,7 +18,7 @@ Unfortunately, accepting all the terms without reading them has led to another g
 
 <a href="https://www.vice.com/en/article/jgqm5x/us-military-location-data-xmode-locate-x" target="_blank">Read the Vice article here</a>
 
-## I got nothing to hide!
+## How tech companies know you?
 
 The average internet user probably just shrugs their shoulders and says: “ Who cares. I got nothing to hide”. It’s not about having nothing to hide, but more about being concerned about how it can be used against you and your loved ones in the future if the political atmosphere changes for instance.
 
@@ -36,7 +36,7 @@ Let’s take a trip down the memory lane back to 2014 when you had your iPhone6 
 
 You had your own cat video shenanigans on Facebook and your very large friend list of hundreds and hundreds of people who’s posts you lurked, liked, and commented on. When you weren’t on Facebook watching cat videos, you had actual conversations with your closest friends and others on Whatsapp. In February 2014 Facebook bought WhatsApp and beyond knowing what type of content engaged you on Facebook, they had a completely new resource of data: Your personal conversations and everyone who you are communicating with from your personal number. Just from a tech firm acquisition, Facebook acquired front row seats to our personal conversations. These conversations are part of our daily lives and they contain a lot of information, such as political beliefs and the way we share content between friends, and how we react to them. When this type of data is being added to all the other information about you( including your location data), it’s where the future horror scenarios begin. 
 
-## Steps we need to take
+## How can we make online privacy better
 
 Unfortunately, it’s a buyers market out there data-wise currently and we have to demand lawmakers and governments to take action even faster to protect our privacy.
 
